# portal-testground

./: .dockerignore  .gitignore  .testgroundignore  Cargo.toml  Dockerfile  Makefile  README.md  manifest.toml
.circleci/: config.yml
src/: main.rs  utils.rs
src/clients/: getdocker.sh  installallclients.sh
src/clients/fluffy/: fluffy.sh
src/clients/trin/: trin.sh
src/clients/ultralight/: ultralight.sh
